implemented login frontend and backend, missing authstateprovider

--- a/BlazorECommerceCourse/Server/appsettings.json
+++ b/BlazorECommerceCourse/Server/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlazorECommerceCourse;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "AppSettings": {
+    "JwtKey": "56ac3d0b-0005-47ca-a9ee-24a34caac86b"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
